# type-level-chess

./: .gitignore  README.md  flake.nix  type-level-chess.cabal
src/: Chess.hs  Frog.hs
src/Chess/: Board.hs  Moves.hs  Types.hs
src/Common/: Terminating.hs  TheoremProving.hs  TypeOr.hs
src/Common/TypeOr/: Class.hs  InstanceLeft.hs  InstanceRight.hs
src/Frog/: Moves.hs  Types.hs
